--- a/sdelaistanok.client/index.html
+++ b/sdelaistanok.client/index.html
@@ -276,7 +276,40 @@
         </div>
       </div>
     </div>
-
+    <div class="question">
+      <div class="padding_1200">
+        <div class="question-header">
+          <h3>Вопрос/Ответ</h3>
+        </div>
+        <div class="question-list">
+          <div class="question-list-item">
+            <button type="button"></button>
+          </div>
+          <div class="question-list-item">
+            <button type="button"></button>
+          </div>
+          <div class="question-list-item">
+            <button type="button"></button>
+          </div>
+          <div class="question-list-item">
+            <button type="button"></button>
+          </div>
+          <div class="question-list-item">
+            <button type="button"></button>
+          </div>
+          <div class="question-list-item">
+            <button type="button"></button>
+          </div>
+      </div>
+    </div>
+    <div class="map">
+      <div class="header">
+        <h3>Где можно нас найти</h3>
+      </div>
+      <div class="ya-map-block">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4a4318a3d7f5911ea226752bb77be0015cda9b0366dd8daee319ad52f48f5fbd&amp;width=100%25&amp;height=700&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+    </div>
     <!--react component (Footer)-->
     <div id="footer" class="react"></div>
     <script type="module" src="/src/main.tsx"></script>
